--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-helmet-async": "^2.0.5",
+    "react-icons": "^5.5.0",
     "react-native": "^0.78.2",
     "react-router-dom": "^6.30.0",
     "react-scripts": "5.0.1",
